feat: update JWT authentication filter to allow preflight requests and public access to auth endpoints